Making progress on layout issues

--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -8,15 +8,15 @@
 /*========== Sections ==========*/
 .content-section {
   margin: 0;
-  margin-top: 30px;
+  /*margin-top: 30px;*/
 }
 
 /*---------- Header ----------*/
 .header {
   text-align: center;
-  padding: 0 10px 0 10px;
+  padding: 20px 10px 0 10px;
   background-color: #fdfffc;
-  border-radius: 0 0 20px 20px;
+  /*border-radius: 0 0 20px 20px;*/
   color: black;
   align-content: center;
 }
@@ -54,6 +54,16 @@
   /*border: 3px solid #dc3545;*/
   margin-left: auto;
 }
+
+
+.perspective-1 {
+  height: 50px;
+  width: 100%;
+  margin-top: -1px;
+  background-color: #cecece;
+  transform: perspective(300px) rotateX(-19deg) rotate(0deg);
+}
+
 
 @media (min-width: 1000px) {
   .header .title {
@@ -115,51 +125,51 @@
 /*---------- Content ----------*/
 .content {
   /*background-color: #e5e5e5;*/
-  width: 100%;
   margin-right: auto;
-  margin-left: auto;/*
-  border: 2px solid #23282b;
-  border-top: none;
-  border-bottom: none;*/
+  margin-left: auto;
   z-index: -1;
 }
 
 .media {
-  width: 100%;
-  /*background-color: white;*/
-  margin-left: auto;
-  margin-right: auto;
+  background-color: #d7d7d7;
+  margin-top: -2px;
 }
+/*
+.media .offset-1 {
+  margin-left: 4.1666665% !important;
+}*/
 
 .media-info {
   height: 100%;
-  margin: 0;
-  padding: 0;
-  margin-right: 20px;
+  margin: auto;
 }
 
 .media-links {
   padding: 10px;
-  margin: 0;
+  margin-bottom: 4.1666665%;
 }
 
-.spacer {
-  height: 20px;
-}
 
 .link {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 500;
-  font-size: 1.1em;
+  font-size: 1.25em;
   margin: 5px;
   color: black;
 }
 
 .wifi {
-  /*margin: 20px auto;*/
-  margin: 0;
   padding: 10px;
+}
+
+.wifi-title {
+  font-weight: bold;
+  text-align: center;
   width: 100%;
+}
+
+.wifi h5 {
+  margin: 0;
 }
 
 /*---------- Schedule ----------*/
@@ -211,7 +221,6 @@
   position: relative;
   /*background: white;
   padding: 20px;*/
-  margin: ;
 }
 
 /*---------- Schedule ----------*/
@@ -251,12 +260,18 @@
 /*---------- Announcements ----------*/
 .announcements {
   height: 300px;
-  padding: 20px;/*
-  margin: 20px 5px 20px 0;*/
+  padding: 20px;
+  margin: 0;
 }
 
 .announcements-title {
   text-align: center;
+}
+
+@media (max-width: 360px),  {
+  .announcements-title {
+    font-size: 24px;
+  }
 }
 
 /*---------- Maps ----------*/
@@ -264,7 +279,6 @@
   background-color: white;
   padding: 40px;
   /*border-radius: 20px 20px 0 0;*/
-  margin-bottom: 60px;
   width: 100%;
 }
 
